/*
 * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

/*
 * Protos for serializing Tribuo's anomaly detection LibSVM model.
 */
package tribuo.anomaly.libsvm;

option java_multiple_files = true;
option java_package = "org.tribuo.anomaly.libsvm.protos";

// Import Tribuo's core protos
import "tribuo-core.proto";

// Import Tribuo's libsvm protos
import "tribuo-libsvm.proto";

/*
LibSVMAnomalyModel proto
 */
message LibSVMAnomalyModelProto {
  tribuo.core.ModelDataProto metadata = 1;
  tribuo.common.libsvm.SVMModelProto model = 2;
}
